// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/drawer/demo/basic-right.md correctly 1`] = `
<button
  class="ant-btn ant-btn-primary"
  type="button"
>
  <span>
    Open
  </span>
</button>
`;

exports[`renders ./components/drawer/demo/config-provider.md correctly 1`] = `
<div
  class="site-drawer-render-in-current-wrapper"
>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Open
    </span>
  </button>
</div>
`;

exports[`renders ./components/drawer/demo/extra.md correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center"
>
  <div
    class="ant-space-item"
    style="margin-right:8px"
  >
    <div
      class="ant-radio-group ant-radio-group-outline"
    >
      <label
        class="ant-radio-wrapper"
      >
        <span
          class="ant-radio"
        >
          <input
            class="ant-radio-input"
            type="radio"
            value="top"
          />
          <span
            class="ant-radio-inner"
          />
        </span>
        <span>
          top
        </span>
      </label>
      <label
        class="ant-radio-wrapper ant-radio-wrapper-checked"
      >
        <span
          class="ant-radio ant-radio-checked"
        >
          <input
            checked=""
            class="ant-radio-input"
            type="radio"
            value="right"
          />
          <span
            class="ant-radio-inner"
          />
        </span>
        <span>
          right
        </span>
      </label>
      <label
        class="ant-radio-wrapper"
      >
        <span
          class="ant-radio"
        >
          <input
            class="ant-radio-input"
            type="radio"
            value="bottom"
          />
          <span
            class="ant-radio-inner"
          />
        </span>
        <span>
          bottom
        </span>
      </label>
      <label
        class="ant-radio-wrapper"
      >
        <span
          class="ant-radio"
        >
          <input
            class="ant-radio-input"
            type="radio"
            value="left"
          />
          <span
            class="ant-radio-inner"
          />
        </span>
        <span>
          left
        </span>
      </label>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Open
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/drawer/demo/form-in-drawer.md correctly 1`] = `
<button
  class="ant-btn ant-btn-primary"
  type="button"
>
  <span
    aria-label="plus"
    class="anticon anticon-plus"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="plus"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
      />
      <path
        d="M192 474h672q8 0 8 8v60q0 8-8 8H160q-8 0-8-8v-60q0-8 8-8z"
      />
    </svg>
  </span>
  <span>
    New account
  </span>
</button>
`;

exports[`renders ./components/drawer/demo/multi-level-drawer.md correctly 1`] = `
<button
  class="ant-btn ant-btn-primary"
  type="button"
>
  <span>
    Open drawer
  </span>
</button>
`;

exports[`renders ./components/drawer/demo/no-mask.md correctly 1`] = `
<button
  class="ant-btn ant-btn-primary"
  type="button"
>
  <span>
    Open
  </span>
</button>
`;

exports[`renders ./components/drawer/demo/placement.md correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center"
>
  <div
    class="ant-space-item"
    style="margin-right:8px"
  >
    <div
      class="ant-radio-group ant-radio-group-outline"
    >
      <label
        class="ant-radio-wrapper"
      >
        <span
          class="ant-radio"
        >
          <input
            class="ant-radio-input"
            type="radio"
            value="top"
          />
          <span
            class="ant-radio-inner"
          />
        </span>
        <span>
          top
        </span>
      </label>
      <label
        class="ant-radio-wrapper"
      >
        <span
          class="ant-radio"
        >
          <input
            class="ant-radio-input"
            type="radio"
            value="right"
          />
          <span
            class="ant-radio-inner"
          />
        </span>
        <span>
          right
        </span>
      </label>
      <label
        class="ant-radio-wrapper"
      >
        <span
          class="ant-radio"
        >
          <input
            class="ant-radio-input"
            type="radio"
            value="bottom"
          />
          <span
            class="ant-radio-inner"
          />
        </span>
        <span>
          bottom
        </span>
      </label>
      <label
        class="ant-radio-wrapper ant-radio-wrapper-checked"
      >
        <span
          class="ant-radio ant-radio-checked"
        >
          <input
            checked=""
            class="ant-radio-input"
            type="radio"
            value="left"
          />
          <span
            class="ant-radio-inner"
          />
        </span>
        <span>
          left
        </span>
      </label>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Open
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/drawer/demo/render-in-current.md correctly 1`] = `
<div
  class="site-drawer-render-in-current-wrapper"
>
  Render in this
  <div
    style="margin-top:16px"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Open
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/drawer/demo/scroll-debug.md correctly 1`] = `
<div
  style="position:relative;z-index:999999"
>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right:8px"
    >
      <button
        aria-checked="false"
        class="ant-switch"
        role="switch"
        type="button"
      >
        <div
          class="ant-switch-handle"
        />
        <span
          class="ant-switch-inner"
        >
          Drawer
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
      style="margin-right:8px"
    >
      <button
        aria-checked="false"
        class="ant-switch"
        role="switch"
        type="button"
      >
        <div
          class="ant-switch-handle"
        />
        <span
          class="ant-switch-inner"
        >
          Drawer2
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
      style="margin-right:8px"
    >
      <button
        aria-checked="false"
        class="ant-switch"
        role="switch"
        type="button"
      >
        <div
          class="ant-switch-handle"
        />
        <span
          class="ant-switch-inner"
        >
          Modal
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        aria-checked="false"
        class="ant-switch"
        role="switch"
        type="button"
      >
        <div
          class="ant-switch-handle"
        />
        <span
          class="ant-switch-inner"
        >
          Modal2
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders ./components/drawer/demo/size.md correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center"
>
  <div
    class="ant-space-item"
    style="margin-right:8px"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Open Default Size (378px)
      </span>
    </button>
  </div>
  <div
    class="ant-space-item"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Open Large Size (736px)
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/drawer/demo/user-profile.md correctly 1`] = `
<div
  class="ant-list ant-list-split ant-list-bordered"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <ul
        class="ant-list-items"
      >
        <li
          class="ant-list-item"
        >
          <div
            class="ant-list-item-meta"
          >
            <div
              class="ant-list-item-meta-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  src="https://gw.alipayobjects.com/zos/rmsportal/BiazfanxmamNRoxxVxka.png"
                />
              </span>
            </div>
            <div
              class="ant-list-item-meta-content"
            >
              <h4
                class="ant-list-item-meta-title"
              >
                <a
                  href="https://ant.design/index-cn"
                >
                  Lily
                </a>
              </h4>
              <div
                class="ant-list-item-meta-description"
              >
                Progresser XTech
              </div>
            </div>
          </div>
          <ul
            class="ant-list-item-action"
          >
            <li>
              <a>
                View Profile
              </a>
            </li>
          </ul>
        </li>
        <li
          class="ant-list-item"
        >
          <div
            class="ant-list-item-meta"
          >
            <div
              class="ant-list-item-meta-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  src="https://gw.alipayobjects.com/zos/rmsportal/BiazfanxmamNRoxxVxka.png"
                />
              </span>
            </div>
            <div
              class="ant-list-item-meta-content"
            >
              <h4
                class="ant-list-item-meta-title"
              >
                <a
                  href="https://ant.design/index-cn"
                >
                  Lily
                </a>
              </h4>
              <div
                class="ant-list-item-meta-description"
              >
                Progresser XTech
              </div>
            </div>
          </div>
          <ul
            class="ant-list-item-action"
          >
            <li>
              <a>
                View Profile
              </a>
            </li>
          </ul>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
